assets/css/style.css
/* ... */
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger{
	padding: 0px;
	height: 100%;
	display: table-cell;
	vertical-align: middle;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-box{display: block;}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner::before,
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner::after,
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner{
	background-color: #cccccc;
	width: 30px;
	
	-webkit-transition: all .3s ease;
	   -moz-transition: all .3s ease;
	    -ms-transition: all .3s ease;
	     -o-transition: all .3s ease;
	        transition: all .3s ease;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	background-color: #14141c;
	display: none;
	padding: 43px 20px 42px 20px;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul{
	margin: 0px;
	list-style-type: none;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li{margin: 0px 0px 10px 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li:last-child{margin-bottom: 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li > a{
	text-decoration: none;
    color: #ccc;
    font-size: 18px;
    line-height: 27px;
    text-transform: uppercase;
    display: block;
    position: relative; 
	font-family: "Montserrat";
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu{
	display: none;
	margin: 0px;
	list-style-type: none;
	padding: 19px 20px 9px 20px;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu li{margin: 0px 0px 10px 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu li:last-child{margin-bottom: 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu li a{
	text-decoration: none;
    color: #ccc;
    font-size: 18px;
    line-height: 27px;
    text-transform: capitalize;
    display: block;
    position: relative; 
	font-family: "Montserrat";
}

.glax_tm_dropdown_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	background-color: #14141c;
}
.glax_tm_dropdown_wrap .drop_list{display: none;}
.glax_tm_dropdown_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	background-color: #14141c;
}
.glax_tm_dropdown_wrap .adress_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	display: flex;
	align-items: center;
	flex-direction: row;
	padding: 40px 0px;
}
.glax_tm_dropdown_wrap .adress_wrap .office_image{
	max-width: 320px;
	margin-right: 30px;
}
.glax_tm_dropdown_wrap .definitions_wrap{width: auto;}
.glax_tm_dropdown_wrap .definitions_wrap h3{
	margin: 0px;
    padding: 0px;
    font-size: 20px;
    letter-spacing: 0px;
    color: #eee;
    font-weight: 300;
    margin-bottom: 17px;
}
.glax_tm_dropdown_wrap .definitions_wrap p{
	color: #999;
	margin-bottom: 10px;
}
.glax_tm_dropdown_wrap .definitions_wrap p a{
	text-decoration: none;
	color: #ff8f03;
	padding-left: 3px;
}
.glax_tm_dropdown_wrap .definitions_wrap p:last-child{margin-bottom: 0px;}
.glax_tm_dropdown_wrap .short_contact{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	padding: 35px 0px 40px 0px;
}
.glax_tm_dropdown_wrap .short_contact .title{
	margin: 0px;
    padding: 0px;
    font-size: 20px;
    letter-spacing: 0px;
    color: #eee;
    line-height: 1.3;
    margin-bottom: 18px;
    font-weight: 300;
}
.glax_tm_dropdown_wrap .short_contact .subtitle{
	margin: 0px;
    padding: 0px;
    margin-bottom: 24px;
    color: #999;
}
.glax_tm_dropdown_wrap .inputs_wrap,
.glax_tm_dropdown_wrap .input_list_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
}
.glax_tm_dropdown_wrap .input_list_wrap ul{
	margin: 0px 0px 0px -20px;
	list-style-type: none;
}
.glax_tm_dropdown_wrap .input_list_wrap ul li{
	margin: 0px 0px 20px 0px;
	float: left;
	width: 33.3333%;
	padding-left: 20px;
}
.glax_tm_dropdown_wrap .input_list_wrap ul li input{
	width: 100%;
    height: 50px;
    border: 1px solid rgba(229,229,229,.04);
    background-color: rgba(255,255,255,.02);
    padding: 0px 20px !important;
    margin-bottom: 10px;
    color: #999;
}
.glax_tm_dropdown_wrap .input_list_wrap ul li input:focus{outline: none;}
.glax_tm_dropdown_wrap textarea{
	width: 100%;
	min-height: 150px;
    border: 1px solid rgba(229,229,229,.04);
    background-color: rgba(255,255,255,.02);
    padding: 10px 20px !important;
    margin-bottom: 20px;
    color: #999;
	font-family: "Open Sans";
}
.glax_tm_dropdown_wrap textarea:focus{outline: none;}
.glax_tm_dropdown_wrap .button{
	width: 100%;
	height: auto;
	float: left;
	clear: both;
}
.glax_tm_dropdown_wrap .button a{
	height: 50px;
    padding: 0px 26px;
    background-color: #ff8f03;
    text-transform: uppercase;
    font-size: 14px;
    letter-spacing: 0.5px;
    color: #14141c;
    font-weight: 600;
    line-height: 50px;
    border: none;
    border-radius: 2px;
	text-decoration: none;
	display: inline-block;
	font-family: "Open Sans";
}
.glax_tm_dropdown_wrap .call_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	text-align: center;
	padding: 40px 0px 35px 0px;
}
.glax_tm_dropdown_wrap .call_wrap .image{display: inline-block;}
.glax_tm_dropdown_wrap .call_wrap .image img{
	border-radius: 100%;
	max-width: 120px;
	background-color: #fff;
	margin-bottom: 26px;
}
.glax_tm_dropdown_wrap .call_wrap h3{
	margin: 0px;
    padding: 0px;
    color: #ff8f03;
    font-size: 20px;
    letter-spacing: 0.5px;
    font-weight: 300;
    margin-bottom: 10px;
}
.glax_tm_dropdown_wrap .call_wrap p{
	margin: 0px;
    padding: 0px;
    font-size: 18px;
    letter-spacing: 0.5px;
    font-weight: 300;
    color: #eee;
	font-family: "Open Sans";
}
.glax_tm_dropdown_wrap .working_hours_wrap_short{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	padding: 40px 0px 40px 0px;
}
/* ... */

